Fix the shelf zindex from overlapping the main bar

--- a/css/extended_injection.css
+++ b/css/extended_injection.css
@@ -38,6 +38,6 @@
   position: relative;
   left: 0;
   right: 0;
-  z-index: 1000;
+  z-index: 900;
   -webkit-transition: height 0.3s linear;
 }
